# LiteBCH

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test_env  test_env.cpp
.cache/clangd/index/: LiteBCH.cpp.BA170E562C9827B0.idx  LiteBCH.h.64576C7F0AE8AB45.idx  aff3ct_compat.h.0193EB82524EC00D.idx  basic_usage.cpp.28D78BB539CF231E.idx  bch_codec.c.1292E57A8F3287DD.idx  bch_codec.h.352992D14AC9A0E9.idx  benchmark.cpp.306755B9B70721C1.idx  comprehensive_test.cpp.4F8D21D36C162235.idx  fast_bench.cpp.6D6B20EB3974216E.idx  kernel_bench.cpp.4EBAD042EF38FE47.idx  legacy_compat_test.cpp.6D7B03E8D289A90A.idx  parallel_bench.cpp.8640E45A59232624.idx  repro_common.h.3D6B9F1568A6D682.idx  repro_demo_failure.cpp.A04604DCEF279A8D.idx  scalability_test.cpp.44262C27BEE1BF57.idx  unit_tests.cpp.F628524826506C9C.idx  verify_wasm_cpp_match.cpp.66B19143EC573F9C.idx
build-wasm/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  litebch.js  litebch.wasm
build-wasm/examples/: CTestTestfile.cmake  Makefile  basic_usage.wasm  cmake_install.cmake
build-wasm/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  fast_bench.js  fast_bench.wasm  kernel_bench.js  kernel_bench.wasm  legacy_compat_test.js  legacy_compat_test.wasm  unit_tests.wasm  verify_wasm_cpp_match.js  verify_wasm_cpp_match.wasm
build_native_simd/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_native_simd/examples/: CTestTestfile.cmake  Makefile  basic_usage  cmake_install.cmake
build_native_simd/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  comprehensive_test  unit_tests
build_wasm/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  litebch.js  litebch.wasm
build_wasm/examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_wasm/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_wasm_check/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  litebch.wasm
build_wasm_check/examples/: CTestTestfile.cmake  Makefile  basic_usage.wasm  cmake_install.cmake
build_wasm_check/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  comprehensive_test.js  comprehensive_test.wasm  unit_tests.js  unit_tests.wasm
build_wasm_simd/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  litebch.wasm
build_wasm_simd/examples/: CTestTestfile.cmake  Makefile  basic_usage.js  basic_usage.wasm  cmake_install.cmake
build_wasm_simd/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  comprehensive_test.js  comprehensive_test.wasm  unit_tests.wasm
examples/: CMakeLists.txt  basic_usage.cpp  web_demo.html
include/litebch/: LiteBCH.h  aff3ct_compat.h
src/: LiteBCH.cpp  wasm_bindings.cpp
tests/: CMakeLists.txt  README.md  benchmark.cpp  comprehensive_test.cpp  fast_bench.cpp  kernel_bench.cpp  legacy_compat_test.cpp  repro_common.h  repro_demo_failure.cpp  supertest.cpp  unit_tests.cpp  verify_wasm_cpp_match.cpp  wasm_benchmark.js  wasm_comprehensive_test.js  wasm_decode_test.js  wasm_supertest.js  wasm_test.js
